<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="registration_error">Neuspješna registracija</string>
    <string name="login_error">Neuspješna prijava</string>
    <string name="price">Iznos*</string>
    <string name="payer_info">Informacije o platitelju*</string>
    <string name="recipient_info">Informacije o primatelju*</string>
    <string name="iban">IBAN</string>
    <string name="model">Model (npr. HR80)</string>
    <string name="reference_number">Referentni broj</string>
    <string name="purpose_code">Šifra namjene plaćanja</string>
    <string name="description">Opis plaćanja*</string>
    <string name="save">Spremi</string>
    <string name="pick_month">Odaberite mjesec:</string>
    <string name="pick_bill_type">Odaberite vrstu računa:</string>
    <string name="login">Prijavi se</string>
    <string name="register">Registriraj se</string>
    <string name="logout">Odjavi se</string>
    <string name="scan_bill">Skeniraj račun</string>
    <string name="add_new_bill">Dodaj novi račun</string>
    <string name="show_bill_history">Povijest računa</string>
    <string name="sign_out">Odjavili ste se</string>
    <string name="grant_permissions">You have to grant camera permission to continue</string>
    <string name="amount">Saldo</string>
    <string name="number_of_bills">Broj računa</string>
    <string name="month">Mjesec</string>
    <string name="new_bill_added">Dodali ste novi račun</string>
    <string name="bill_number_formats">Broj računa: %d</string>
    <string name="mandatory_field">Obavezno polje</string>
    <string name="wrong_mail">Pogrešan format e-maila</string>
    <string name="delete_bills">Obriši račune</string>
    <string name="cancel">Odustani</string>
    <string name="delete">Obriši</string>
    <string name="delete_message">Odabirom ove opcije ostat ćete bez svih računa. Jeste li sigurni?</string>
    <string name="delete_completed">Obrisali ste sve račune</string>
    <string name="main_menu">Glavni izbornik</string>
    <string name="new_bill">Novi račun</string>
    <string name="bills">Računi</string>
</resources>
