<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/scan_bill_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:text="@string/scan_bill"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/add_new_bill_button"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/scan_bill_button"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:text="@string/add_new_bill"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/see_bill_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_new_bill_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:text="@string/show_bill_history"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/delete_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        android:background="@color/colorAccent"
        android:text="@string/delete_bills"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorAccent"
        android:text="@string/logout"
        android:textColor="@color/colorWhite" />

</android.support.constraint.ConstraintLayout>